# tg_rouse

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
api_v1/: __init__.py
api_v1/auth/: auth.py  manager.py  schemas.py
api_v1/cart/: crud.py  schemas.py  views.py
api_v1/order/: crud.py  schemas.py  views.py
api_v1/products/: crud.py  schemas.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
bot/: admin.py  crud.py  main_bot.py  models.py  run.py  views.py
config/bot/: admin.py  main_bot.py  models.py  urls.py  views.py
config/bot/migrations/: 0001_initial.py  0002_alter_profile_options_remove_order_email_and_more.py
config/config/: settings.py  urls.py
config/config/database/: response_bot.py
config/css/: style.css
config/js/: app.js
config/management/management/commands/: run_bot.py
config/static/css/: style.css
config/static/js/: app.js  cart.js  search.js
config/static/templates/: cart.html  index.html  search.html  t.py
config/templates/: index.html
core/: config.py
core/models/: __init__.py  database.py  db_helper.py
static/css/: auth.css  cart.css  nav-bar.css
static/js/: auth.js  cart.js  check_auth.js  nav-bar.js
static/templates/: auth.html  cart.html  index.html  search.html
