[tool.poetry]
name = "tg-rouse"
version = "0.1.0"
description = ""
authors = ["artiom_naumenko_1 <anaumenko484@bk.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
telebot = "^0.0.5"
environs = "^11.0.0"
aiohttp = "^3.9.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
